@@ -27,3 +27,13 @@
     <a c:base="widget" c:mode="partition" href="base.html/test">mode=partition</a>
     <a c:base="widget" c:mode="proxy" href="base.html/test">mode=proxy</a>
 </p>
+
+<p>
+    c:base=parent
+    <a c:base="parent" href="nested_base.html/test">Default</a>
+    <a c:base="parent" c:mode="direct" href="nested_base.html/test">mode=direct</a>
+    <a c:base="parent" c:mode="focus" href="nested_base.html/test">mode=focus</a>
+    <a c:base="parent" c:mode="partial" href="nested_base.html/test">mode=partial</a>
+    <a c:base="parent" c:mode="partition" href="nested_base.html/test">mode=partition</a>
+    <a c:base="parent" c:mode="proxy" href="nested_base.html/test">mode=proxy</a>
+</p>
