@@ -1,0 +1,1 @@
+<c:widget id="base" type="demo_base"/>
