@@ -590,6 +590,11 @@ points to the widget server \\
 child widget \\
 
 \hline
+
+\texttt{parent} & links are relative to the parent of this widget,
+i.e. the container which declared it \\
+
+\hline
 \end{tabular}
 
 The base name must be specified in the element attribute
